--- a/public/privacy-policy/index.html
+++ b/public/privacy-policy/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <h1>Privacy Policy</h1>
-<p>Thank you visiting. This website is subject to the
+<p>Thank you for visiting. This website is subject to the
     <a href="https://neo4j.com/privacy-policy/">Neo4j Privacy Policy</a>.</p>
 
 </body>
