Mention the "share" button.

--- a/public/google-drive-integration/index.html
+++ b/public/google-drive-integration/index.html
@@ -44,6 +44,11 @@
 </p>
 
 <p>
+    Arrows.app includes a "Share" button that opens the familiar Google Drive sharing dialog.
+    This dialog allows sharing the diagram with other Google Drive users.
+</p>
+
+<p>
     In addition, arrows.app adds itself to the Google Drive user interface.
     This makes it possible to open a diagram with arrows.app, or to create a new diagram,
     directly from the Google Drive user interface.
