--- a/public/google-drive-integration/index.html
+++ b/public/google-drive-integration/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
 
-<div class="logo">
+<h1 class="logo">
     <img src="assets/arrows_logo.svg" alt="Logo" />
-</div>
+    <span>arrows.app</span>
+</h1>
 
 <h1>Google Drive Integration</h1>
 
