--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<div class="logo">
+<h1 class="logo">
     <img src="assets/arrows_logo.svg" alt="Logo" />
-</div>
+    <span>arrows.app</span>
+</h1>
 
-<h1>Arrows.app</h1>
 <p>Web-based tool for drawing pictures of graphs</p>
 
 <img srcset="
