Update and style about & google drive files

--- a/public/privacy-policy/index.html
+++ b/public/privacy-policy/index.html
@@ -11,6 +11,7 @@
 
 <div class="logo">
     <img src="assets/arrows_logo.svg" alt="Logo" />
+    <h1>arrows.app</h1>
 </div>
 
 <h1>Privacy Policy</h1>
