--- a/public/about/index.html
+++ b/public/about/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 
-<h1 class="logo">
+<div class="logo">
     <img src="assets/arrows_logo.svg" alt="Logo" />
-    <span>arrows.app</span>
-</h1>
+    <h1>arrows.app</h1>
+</div>
 
 <p>Web-based tool for drawing pictures of graphs</p>
 
