Be super clear about Google trademarks.
This is in reaction to the message received from Google:

    We detected the following issue(s):

    Home Page URL contains the well-known brand name: "Google"

--- a/public/google-drive-integration/index.html
+++ b/public/google-drive-integration/index.html
@@ -15,6 +15,15 @@
 </div>
 
 <h1>Google Drive Integration</h1>
+<p style="font-style: italic">
+    "Google" and "Google Drive" are trademarks of Google Inc.
+</p>
+
+<h2>Who makes arrows.app</h2>
+<p>
+    Arrows.app is powered by <a href="https://neo4j.com/labs/">Neo4j Labs</a>.
+    Arrows.app is not associated with Google Inc.
+</p>
 
 <h2>What arrows.app does with user data</h2>
 <p>
