--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Cookiebot connected to main neo4j.com cookies -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="0c2ea320-7217-4e6b-91f2-77765fc83255"
+            type="text/javascript" async></script>
+    <link rel="stylesheet" href="css/cookiebot.external.min.css">
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125028119-1"></script>
     <script>
