Add meta description tag.

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Arrows</title>
+    <title>Arrows.app</title>
+    <meta name="description"
+          content="Web-based tool for drawing pictures of graphs, for use in documents or presentations.">
   </head>
   <body>
     <noscript>
