First (naive) attempt to use Google Fonts.

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@
     <title>Arrows.app</title>
     <meta name="description"
           content="Web-based tool for drawing pictures of graphs, for use in documents or presentations.">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
