feat(arrows-ts) minor tweaks to get things mostly working with updated dependencies

--- a/apps/arrows-ts/index.html
+++ b/apps/arrows-ts/index.html
@@ -4,7 +4,7 @@
     <!-- Cookiebot connected to main neo4j.com cookies -->
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="0c2ea320-7217-4e6b-91f2-77765fc83255"
             type="text/javascript" async></script>
-    <link rel="stylesheet" href="css/cookiebot.external.min.css">
+    <link rel="stylesheet" href="/css/cookiebot.external.min.css">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1192232-34"></script>
