google-drive: update to latest API for auth

--- a/apps/arrows-ts/index.html
+++ b/apps/arrows-ts/index.html
@@ -46,6 +46,7 @@
     </noscript>
     <div id="root" style="height: 100%"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js"></script>
   </body>
 </html>
